tests/ui/opts/11_plain_params_arg.stderr
error: unexpected end of input, expected parentheses
 --> tests/ui/opts/11_plain_params_arg.rs:4:10
  |
4 | #[funcmap(params)]
  |          ^^^^^^^^
